# automato_minesweeper

./: .gitmodules  README.md  angular.json  docker-compose-build.yaml  docker-compose-run.yaml  docker-compose.yaml  package-lock.json  package.json  properties.yaml  tsconfig.json
back/: Cargo.toml  Dockerfile  properties.yaml
back/src/: main.rs
back/src/constant/: mod.rs
back/src/minesweeper/: board.rs  mod.rs  resource.rs
back/src/property/: mod.rs
front/: .gitignore  Dockerfile  README.md  angular.json  package.json
front/src/: index.html  reset.sass  styles.sass  var.sass
front/src/app/: app.component.html  app.component.sass  app.config.ts  app.routes.ts
front/src/app/components/home/: home.component.html
front/src/app/components/minefield/: minefield-routing.module.ts  minefield.routes.ts
front/src/app/core/enum/: CellType.ts
front/src/app/core/interface/: icon.ts  neighbor.ts
front/src/app/service/minefield/: minefield.service.ts
front/src/app/service/role/: icon.service.ts  move.service.ts  notification.service.ts
front/src/environment/: environment.prod.ts  environment.ts
src/: index.html  main.rs
src/api/: mod.rs
src/app/: app.component.html  app.component.sass  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/components/core/button-menu/: button-menu.component.html  button-menu.component.sass
src/app/components/home/: home.component.sass
src/app/components/minefield/: minefield.routes.ts
src/constant/: mod.rs
src/minesweeper/: board.rs  mod.rs  node.rs  resource.rs
src/property/: mod.rs
(+21 files in other folders)
