[package]
name = "back_minefield"
version = "0.1.0"
edition = "2021"

[dependencies]
paperclip = { version = "0.8.2", features = ["actix4", "swagger-ui", "openapiv3", "v3"] }
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
clap = { version = "4.5.4", features = ["cargo"] }
rand = "0.8.5"
serde_json = "1.0.115"
once_cell = "1.19.0"
#validator = { version = "0.18.1", features = ["derive"] }
serde_valid = "0.19.0"
actix-cors = "0.7.0"
env_logger = "0.11.3"
log = "0.4.21"
#schemars = "0.8.16"
#futures = "0.3.30"
